# This program is free software; you can redistribute it and/or
# modify it under the terms of version 3 of the GNU General Public
# License as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>

@YELP_HELP_RULES@

HELP_ID = frogr
HELP_MEDIA = \
	figures/add-tags-dialog.png \
	figures/add-to-groups.png \
	figures/add-to-sets.png \
	figures/auth-dialog-step1.png \
	figures/auth-dialog-step2.png \
	figures/create-new-set.png \
	figures/edit-picture-details.png \
	figures/frogr-remote-organizer.png \
	figures/preferences-connection.png \
	figures/preferences-general.png \
	figures/preferences-misc.png

HELP_FILES = \
	add-pictures.page \
	group-pictures.page \
	preferences.page \
	edit-pictures.page \
	external-viewer.page \
	index.page \
	remove-pictures.page \
	create-account.page \
	introduction.page \
	set-pictures.page \
	display.page \
	organize.page \
	tag.page \
	pictures.page \
	upload-pictures.page

HELP_LINGUAS = cs es de el en_GB fr gl pt_BR ru sl
