help_pages = [
    'add-pictures.page',
    'create-account.page',
    'display.page',
    'edit-pictures.page',
    'external-viewer.page',
    'group-pictures.page',
    'index.page',
    'introduction.page',
    'organize.page',
    'pictures.page',
    'preferences.page',
    'remove-pictures.page',
    'set-pictures.page',
    'tag.page',
    'upload-pictures.page'
]

help_media = [
    'figures/add-tags-dialog.png',
    'figures/add-to-groups.png',
    'figures/add-to-sets.png',
    'figures/auth-dialog-step1.png',
    'figures/auth-dialog-step2.png',
    'figures/create-new-set.png',
    'figures/edit-picture-details.png',
    'figures/frogr.svg',
    'figures/frogr-remote-organizer.png',
    'figures/preferences-connection.png',
    'figures/preferences-general.png',
    'figures/preferences-misc.png'
]

gnome.yelp('frogr',
           sources: help_pages,
           media: help_media)
